--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,11 +2,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "https://your-backend.vercel.app/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
+      "destination": "/login"
     }
   ]
 }
